Bug 521774 - Window open/close effects with shaders fail to load in 6.7
Summary: Window open/close effects with shaders fail to load in 6.7
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.7.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2026-06-19 16:10 UTC by Tech-Tac
Modified: 2026-06-25 14:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tech-Tac 2026-06-19 16:10:10 UTC
DESCRIPTION
Attempting to apply any window open/close effects which utilize shaders on KWin 6.7.0 freezes the desktop for 10 seconds and the effect is not applied. This was not the case on 6.6.

STEPS TO REPRODUCE
1. Install a window open/close effect (Example: Incinerate from schneegan's Burn My Windows)
2. In Animations settings page, choose it and press Apply
3. Notice time taken to apply effect
4. Attempt to open or close any window

OBSERVED RESULT
Effect takes a long time to load while freezing the rest of the desktop, while still not working afterwards.

EXPECTED RESULT
Effect loads quickly and works correctly as it did in Plasma 6.6.5.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux w/ Linux 7.1.0
KDE Plasma Version: 6.7.0
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
GPU: AMD Radeon HD 7560D using radeon/r600

ADDITIONAL INFORMATION
Journal logs when pressing apply:
16:04:22.781 UTC plasma-kwin_wayland.service file:///home/techtac/.local/share/kwin/tabbox/fast_thumbnails/contents/ui/main.qml:225:37: Unable to assign [undefined] to bool
16:04:35.123 UTC plasma-kwin_wayland.service 0x22: 0:530(2): error: `fragColor' undeclared
16:04:35.124 UTC plasma-kwin_wayland.service 0x23: 0:530(58): error: `fragColor' undeclared
16:04:35.124 UTC plasma-kwin_wayland.service 0x24: 0:530(14): error: no matching function for call to `sourceEncodingToNitsInDestinationColorspace(error)'; candidates are:
16:04:35.124 UTC plasma-kwin_wayland.service 0x25: 0:530(14): error:    vec4 sourceEncodingToNitsInDestinationColorspace(vec4)
16:04:35.124 UTC plasma-kwin_wayland.service 0x26: 0:531(2): error: `fragColor' undeclared
16:04:35.124 UTC plasma-kwin_wayland.service 0x27: 0:531(40): error: `fragColor' undeclared
16:04:35.124 UTC plasma-kwin_wayland.service 0x28: 0:531(14): error: no matching function for call to `nitsToDestinationEncoding(error)'; candidates are:
16:04:35.124 UTC plasma-kwin_wayland.service 0x29: 0:531(14): error:    vec4 nitsToDestinationEncoding(vec4)
16:04:35.124 UTC plasma-kwin_wayland.service Failed to compile fragment shader: 
 0:530(2): error: `fragColor' undeclared
0:530(58): error: `fragColor' undeclared
0:530(14): error: no matching function for call to `sourceEncodingToNitsInDestinationColorspace(error)'; candidates are:
0:530(14): error:    vec4 sourceEncodingToNitsInDestinationColorspace(vec4)
0:531(2): error: `fragColor' undeclared
0:531(40): error: `fragColor' undeclared
0:531(14): error: no matching function for call to `nitsToDestinationEncoding(error)'; candidates are:
0:531(14): error:    vec4 nitsToDestinationEncoding(vec4)

16:04:35.125 UTC plasma-kwin_wayland.service line 1:#version 140
16:04:35.159 UTC plasma-kwin_wayland.service line 2:#define TRAIT_MAP_TEXTURE 1
16:04:35.159 UTC plasma-kwin_wayland.service line 3:#define TRAIT_UNIFORM_COLOR 0
16:04:35.189 UTC plasma-kwin_wayland.service line 4:#define TRAIT_MODULATE 0
16:04:35.189 UTC plasma-kwin_wayland.service line 5:#define TRAIT_ADJUST_SATURATION 0
16:04:35.218 UTC plasma-kwin_wayland.service line 6:#define TRAIT_TRANSFORM_COLORSPACE 0
16:04:35.219 UTC plasma-kwin_wayland.service line 7:#define TRAIT_MAP_EXTERNAL_TEXTURE 0
16:04:35.247 UTC plasma-kwin_wayland.service line 8:#define TRAIT_MAP_MULTI_PLANE_TEXTURE 0
16:04:35.276 UTC plasma-kwin_wayland.service line 9:#define TRAIT_ROUNDED_CORNERS 0
16:04:35.306 UTC plasma-kwin_wayland.service line 10:#define TRAIT_BORDER 0
16:04:35.335 UTC plasma-kwin_wayland.service line 11:#define TRAIT_YUV_CONVERSION 0
16:04:35.349 UTC plasma-kwin_wayland.service line 12:#define KWIN_LEGACY
16:04:35.362 UTC plasma-kwin_wayland.service line 13:#define PLASMA6
... the rest of the shader file ...
16:04:46.934 UTC plasma-kwin_wayland.service line 1033:
16:04:46.947 UTC plasma-kwin_wayland.service line 1034:  setOutputColor(oColor);
16:04:46.960 UTC plasma-kwin_wayland.service line 1035:}
16:04:46.974 UTC plasma-kwin_wayland.service line 1036:
16:04:46.986 UTC plasma-kwin_wayland.service line 1037:
16:04:47.000 UTC plasma-kwin_wayland.service /home/techtac/.local/share/kwin/effects/kwin6_effect_incinerate/contents/code/main.js:34: error: Shader failed to load
Comment 1 Bug Janitor Service 2026-06-19 16:52:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9430
Comment 2 Zamundaaa 2026-06-22 11:08:21 UTC
Git commit 40ce6009f93c54b102750d4228a9eb201910ef3e by Xaver Hugl.
Committed on 22/06/2026 at 10:29.
Pushed by zamundaaa into branch 'master'.

scripting: fix backwards compatibility for shaders

KWin automatically ports shaders to old OpenGL versions, so it no longer
attempted to load the "core" version and the resulting shader was broken.

M  +7    -0    src/scripting/scriptedeffect.cpp

https://invent.kde.org/plasma/kwin/-/commit/40ce6009f93c54b102750d4228a9eb201910ef3e
Comment 3 Zamundaaa 2026-06-22 13:07:59 UTC
Git commit fa5ab340ecc2cb4ed58220afda8ffbf21199ee02 by Xaver Hugl.
Committed on 22/06/2026 at 12:17.
Pushed by zamundaaa into branch 'Plasma/6.7'.

scripting: fix backwards compatibility for shaders

KWin automatically ports shaders to old OpenGL versions, so it no longer
attempted to load the "core" version and the resulting shader was broken.


(cherry picked from commit 40ce6009f93c54b102750d4228a9eb201910ef3e)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +7    -0    src/scripting/scriptedeffect.cpp

https://invent.kde.org/plasma/kwin/-/commit/fa5ab340ecc2cb4ed58220afda8ffbf21199ee02