scripting: fix backwards compatibility for shaders

KWin automatically ports shaders to old OpenGL versions, so it no longer
attempted to load the "core" version and the resulting shader was broken.

BUG: 521774